--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,5 +1,13 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/* normalize css */
 html {
     line-height: 1.15;
     -webkit-text-size-adjust: 100%;
@@ -103,7 +111,6 @@ button,
     -webkit-appearance: button;
 }
 
-
 button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
@@ -139,7 +146,6 @@ progress {
 textarea {
     overflow: auto;
 }
-
 
 [type="checkbox"],
 [type="radio"] {
@@ -182,9 +188,12 @@ template {
     display: none;
 }
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+a {
+    text-decoration: none;
 }
-
+li {
+    list-style: none;
+}
+input {
+    outline: none;
+}
