--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,17 +1,17 @@
 // body {
 //     font-family: 'Roboto', sans-serif;
-//     color: $colour-primary;
 //     font-size: 2rem;
 //     font-weight: 100;
 //     line-height: 1.7;
 // }
 
-// h1 {
-//     font-family: 'Roboto', sans-serif;
-//     font-weight: 900;
-//     font-size: 5rem;
-//     font-style: italic;
-// }
+h1 {
+    font-family: 'Raleway', sans-serif;
+    font-family: "Shrikhand", cursive;
+    font-weight: 900;
+    font-size: 5rem;
+    font-style: italic;
+}
 
 // textarea {
 //     font-family: 'Roboto', sans-serif;
