--- a/scss/main.css
+++ b/scss/main.css
@@ -41,6 +41,7 @@ pre {
 
 a {
   background-color: transparent;
+  color: #000;
 }
 
 abbr[title] {
@@ -252,6 +253,29 @@ header .logo img {
      object-fit: cover;
 }
 
+footer {
+  width: 100%;
+}
+
+footer__container {
+  padding: 20px;
+}
+
+footer__nav {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+footer__nav li {
+  margin-bottom: 5px;
+}
+
 .reservation {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -315,7 +339,7 @@ header .logo img {
 }
 
 .steps ol {
-  padding: 0 20px 20px;
+  padding: 0 0 20px 20px;
   list-style: none;
   *list-style: decimal;
   counter-reset: li;
@@ -372,5 +396,77 @@ header .logo img {
 .steps__item i {
   margin: 0 25px;
   color: #8c8b8b;
+}
+
+.restaurants {
+  padding: 20px;
+  background-color: #eeeded;
+}
+
+.restaurants h2 {
+  margin-bottom: 20px;
+}
+
+.cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  row-gap: 20px;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  background-color: #fff;
+  color: #000;
+  border-radius: 15px;
+}
+
+.card__img {
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  overflow: hidden;
+  height: 180px;
+}
+
+.card__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card__new {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+  background-color: #99e2d0;
+  color: #03906d;
+  padding: 6px;
+  border-radius: 5px;
+}
+
+.card__container {
+  padding: 20px;
+}
+
+.card__favorite {
+  position: absolute;
+  bottom: 21%;
+  right: 16%;
+  font-size: 14px;
+}
+
+.card__favorite i.heart-unfill:hover:before {
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-background-clip: text;
+  font-weight: 900;
+  background-image: linear-gradient(193deg, #9356DC 0%, #FF79DA 100%);
+  -webkit-text-fill-color: transparent;
 }
 /*# sourceMappingURL=main.css.map */
