--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "./components/buttons";
 
 @import "./layout/header";
+@import "./layout/footer";
 // @import "./layout/container";
 
 @import "./pages/menu";
