--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -41,7 +41,7 @@
         text-align: left;
     }
     ol {
-        padding: 0 20px 20px;
+        padding: 0 0 20px 20px;
         list-style: none;
         *list-style: decimal;
         counter-reset: li;
@@ -63,7 +63,7 @@
             top: 50%;
             color: #fff;
             margin-top: -15px;
-            background: $colour-primary;
+            background: $color-primary;
             height: 32px;
             width: 32px;
             border-radius: 50%;
@@ -73,7 +73,7 @@
             background-color: #fcf0ff;
         }
         &:hover i {
-            color: $colour-primary;
+            color: $color-primary;
         }
         span {
             font-size: 18px;
@@ -86,6 +86,65 @@
     }
 }
 
-.restauration{
-    
+.restaurants {
+    padding: 20px;
+    background-color: #eeeded;
+    h2 {
+        margin-bottom: 20px;
+    }
+}
+
+.cards {
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+}
+
+.card {
+    position: relative;
+    width: 100%;
+    background-color: #fff;
+    color: #000;
+    @include border-raduis-card;
+    &__img {
+        border-top-left-radius: 15px;
+        border-top-right-radius: 15px;
+        overflow: hidden;
+        height: 180px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    &__new {
+        position: absolute;
+        top: 5%;
+        right: 5%;
+        background-color: #99e2d0;
+        color: #03906d;
+        padding: 6px;
+        border-radius: 5px;
+    }
+    &__container {
+        padding: 20px;
+    }
+
+    &__favorite {
+        position: absolute;
+        bottom: 21%;
+        right: 16%;
+        font-size: 14px;
+        i.heart-unfill {
+            &:hover {
+                &:before {
+                    transition: all 0.3s ease;
+                    -webkit-background-clip: text;
+                    font-weight: 900;
+                    background-image: linear-gradient(193deg, $color-primary 0%, $color-secondary 100%);
+                    -webkit-text-fill-color: transparent;
+                }
+            }
+        }
+    }
 }
