--- a/scss/utils/_variables.scss
+++ b/scss/utils/_variables.scss
@@ -1,6 +1,6 @@
-$colour-primary: #9356DC;
-$colour-secondary: #FF79DA;
-$colour-Tertiary: #99E2D0;
+$color-primary: #9356DC;
+$color-secondary: #FF79DA;
+$color-Tertiary: #99E2D0;
 
 
-$colour-white: #fff;
+$color-white: #fff;
