--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,15 +1,34 @@
-footer {
-    width: 100%;
-    &__container {
-        padding: 20px;
+.footer {
+    padding: 20px;
+    background-color: #494949;
+    .container {
+        display: flex;
+        flex-direction: column;
+        color: #fff;
+    }
+    // width: 100%;
+    &__title {
+        font-size: 20px;
+        margin-bottom: 10px;
     }
     &__nav {
         width: 100%;
-        display: flex;
-        flex-direction: column;
-
         li {
             margin-bottom: 5px;
+            a {
+                display: flex;
+                color: #fff;
+                i{
+                    width: 15px;
+                    margin-right: 10px;
+                }
+            }
         }
     }
 }
+
+// @media screen (max-width: 992px) {
+//     header{
+
+//     }
+// }
