--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,8 +5,9 @@ header {
     flex-wrap: wrap;
     width: 100%;
     .logo {
-        font-size: 7rem;
+        font-size: 4rem;
         width: 50%;
+        padding: 10px;
         img {
             width: 100%;
             object-fit: cover;
@@ -14,3 +15,18 @@ header {
     }
 }
 
+@media screen and (min-width: 768px) {
+    header{
+        .logo{
+            font-size: 1rem;
+            padding: 20px;
+        }
+    }
+}
+
+// @media (min-width:320px) { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ }
+// @media (min-width:480px) { /* smartphones, Android phones, landscape iPhone */ }
+// @media (min-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
+// @media (min-width:801px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
+// @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
+// @media (min-width:1281px) { /* hi-res laptops and desktops */ }
