--- a/scss/main.css
+++ b/scss/main.css
@@ -7,6 +7,22 @@
           box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style-type: none;
+}
+
+h1 {
+  font-family: 'Raleway', sans-serif;
+  font-family: "Shrikhand", cursive;
+  font-weight: 900;
+  font-size: 5rem;
+  font-style: italic;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* normalize css */
 html {
@@ -206,14 +222,6 @@ ol {
   list-style-type: decimal;
 }
 
-h1 {
-  font-family: 'Raleway', sans-serif;
-  font-family: "Shrikhand", cursive;
-  font-weight: 900;
-  font-size: 5rem;
-  font-style: italic;
-}
-
 .btn {
   padding: 12px;
   border: none;
@@ -225,6 +233,47 @@ h1 {
 
 .btn a {
   color: #fff;
+}
+
+.footer {
+  padding: 20px;
+  background-color: #494949;
+}
+
+.footer .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: #fff;
+}
+
+.footer__title {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.footer__nav {
+  width: 100%;
+}
+
+.footer__nav li {
+  margin-bottom: 5px;
+}
+
+.footer__nav li a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #fff;
+}
+
+.footer__nav li a i {
+  width: 15px;
+  margin-right: 10px;
 }
 
 header {
@@ -243,8 +292,9 @@ header {
 }
 
 header .logo {
-  font-size: 7rem;
+  font-size: 4rem;
   width: 50%;
+  padding: 10px;
 }
 
 header .logo img {
@@ -253,27 +303,11 @@ header .logo img {
      object-fit: cover;
 }
 
-footer {
-  width: 100%;
-}
-
-footer__container {
-  padding: 20px;
-}
-
-footer__nav {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-footer__nav li {
-  margin-bottom: 5px;
+@media screen and (min-width: 768px) {
+  header .logo {
+    font-size: 1rem;
+    padding: 20px;
+  }
 }
 
 .reservation {
@@ -456,17 +490,50 @@ footer__nav li {
 
 .card__favorite {
   position: absolute;
-  bottom: 21%;
-  right: 16%;
-  font-size: 14px;
+  bottom: 10%;
+  right: 11%;
+  font-size: 25px;
 }
 
 .card__favorite i.heart-unfill:hover:before {
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  background-clip: text;
   -webkit-background-clip: text;
   font-weight: 900;
   background-image: linear-gradient(193deg, #9356DC 0%, #FF79DA 100%);
   -webkit-text-fill-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .steps ol {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .steps ol li {
+    width: 45%;
+  }
+  .steps ol li:first-child, .steps ol li:nth-of-type(2) {
+    margin-bottom: 35px;
+  }
+  .cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .card {
+    min-width: 45%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
