--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,12 +5,12 @@
 
 @import "./base/base";
 @import "./base/typography";
+@import "./base/normalize";
 
 @import "./components/buttons";
 
-@import "./layout/header";
 @import "./layout/footer";
-// @import "./layout/container";
+@import "./layout/header";
 
 @import "./pages/menu";
 @import "./pages/home";
