--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -58,8 +58,10 @@
         max-width: 100%;
         cursor: pointer;
         background-color: #fff;
+        animation: revealAnimation 1.5s cubic-bezier(0.5, 0, 0, 1 ) forwards;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         overflow: hidden;
+        opacity: 0;
         @media screen and (min-width: 768px) {
             width: 49%;
         }
@@ -122,5 +124,17 @@
         a {
             padding: 30px;
         }
+    }
+}
+
+// [class*="delay-"] {
+//     opacity: 0;
+//     animation: none ;
+//     transition: 0s ;
+// }
+
+@for $i from 1 to 10 {
+    .box.delay-#{$i} {
+        animation-delay: #{$i/10}s;
     }
 }
