--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,26 +1,24 @@
-// body {
-//     font-family: 'Roboto', sans-serif;
-//     font-size: 2rem;
-//     font-weight: 100;
-//     line-height: 1.7;
-// }
-
-h1 {
-    font-family: 'Raleway', sans-serif;
-    font-family: "Shrikhand", cursive;
-    font-weight: 900;
-    font-size: 5rem;
-    font-style: italic;
+body {
+    font-family: "Roboto", sans-serif;
+    scroll-behavior: smooth;
 }
 
+h1 {
+    font-size: 5rem;
+}
+h3 {
+    font-size: 16px;
+}
+
+p {
+    font-size: 14px;
+}
 // textarea {
-//     font-family: 'Roboto', sans-serif;
 //     font-weight: 100;
 //     font-size: 2rem;
 // }
 
 // button {
-//     font-family: 'Roboto', sans-serif;
 //     font-weight: 900;
 //     font-style: italic;
 //     font-size: 2.75rem;
