--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,17 +1,15 @@
 header {
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    width: 100%;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    padding: 10px;
+    z-index: 1000;
     .logo {
         font-size: 4rem;
         width: 50%;
-        padding: 10px;
+        margin: auto;
         @media screen and (min-width: 768px) {
-            font-size: 1rem;
-            padding: 20px;
+            width: 25%;
+            padding: 10px;
         }
         img {
             width: 100%;
@@ -25,10 +23,3 @@ header {
         top: 39px;
     }
 }
-
-// @media (min-width:320px) { /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ }
-// @media (min-width:480px) { /* smartphones, Android phones, landscape iPhone */ }
-// @media (min-width:600px) { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ }
-// @media (min-width:801px) { /* tablet, landscape iPad, lo-res laptops ands desktops */ }
-// @media (min-width:1025px) { /* big landscape tablets, laptops, and desktops */ }
-// @media (min-width:1281px) { /* hi-res laptops and desktops */ }
