--- a/scss/main.css
+++ b/scss/main.css
@@ -15,12 +15,21 @@ li {
   list-style-type: none;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  scroll-behavior: smooth;
+}
+
 h1 {
-  font-family: 'Raleway', sans-serif;
-  font-family: "Shrikhand", cursive;
-  font-weight: 900;
   font-size: 5rem;
-  font-style: italic;
+}
+
+h3 {
+  font-size: 16px;
+}
+
+p {
+  font-size: 14px;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -306,30 +315,22 @@ ol {
 
 header {
   position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 100%;
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+  padding: 10px;
+  z-index: 1000;
 }
 
 header .logo {
   font-size: 4rem;
   width: 50%;
-  padding: 10px;
+  margin: auto;
 }
 
 @media screen and (min-width: 768px) {
   header .logo {
-    font-size: 1rem;
-    padding: 20px;
+    width: 25%;
+    padding: 10px;
   }
 }
 
@@ -347,8 +348,13 @@ header .arrow {
 }
 
 .menu--img {
-  max-height: 277px;
   width: 100%;
+  height: 270px;
+}
+
+.menu--img img {
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -421,10 +427,8 @@ header .arrow {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
     -webkit-column-gap: 15px;
             column-gap: 15px;
   }
@@ -438,8 +442,8 @@ header .arrow {
   max-width: 100%;
   cursor: pointer;
   background-color: #fff;
-  -webkit-animation: revealAnimation 1.5s cubic-bezier(0.5, 0, 0, 1) forwards;
-          animation: revealAnimation 1.5s cubic-bezier(0.5, 0, 0, 1) forwards;
+  -webkit-animation: revealAnimation 1s cubic-bezier(0.5, 0, 0, 1) forwards;
+          animation: revealAnimation 1s cubic-bezier(0.5, 0, 0, 1) forwards;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   overflow: hidden;
@@ -462,22 +466,35 @@ header .arrow {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding: 15px;
 }
 
 .menu .box__content {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
-  padding: 15px;
+}
+
+.menu .box__content h3 {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.menu .box__content p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  margin-top: 7px;
 }
 
 .menu .box .price {
@@ -491,7 +508,7 @@ header .arrow {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  padding: 15px;
+  padding-left: 5px;
 }
 
 .menu .box .check {
@@ -551,6 +568,13 @@ header .arrow {
   padding: 30px;
 }
 
+@media (prefers-reduced-motion: reduce) {
+  .box {
+    -webkit-animation: none !important;
+            animation: none !important;
+  }
+}
+
 .box.delay-1 {
   -webkit-animation-delay: 0.1s;
           animation-delay: 0.1s;
@@ -594,6 +618,11 @@ header .arrow {
 .box.delay-9 {
   -webkit-animation-delay: 0.9s;
           animation-delay: 0.9s;
+}
+
+.box.delay-10 {
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
 }
 
 .reservation {
