--- a/scss/pages/_menu.scss
+++ b/scss/pages/_menu.scss
@@ -1,7 +1,11 @@
 .menu--img {
-    max-height: 277px;
     width: 100%;
-    object-fit: cover;
+    height: 270px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .menu {
@@ -47,8 +51,7 @@
         row-gap: 15px;
         @media screen and (min-width: 768px) {
             display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
+            flex-flow: row wrap;
             column-gap: 15px;
         }
     }
@@ -58,7 +61,7 @@
         max-width: 100%;
         cursor: pointer;
         background-color: #fff;
-        animation: revealAnimation 1.5s cubic-bezier(0.5, 0, 0, 1 ) forwards;
+        animation: revealAnimation 1s cubic-bezier(0.5, 0, 0, 1) forwards;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         overflow: hidden;
         opacity: 0;
@@ -70,24 +73,36 @@
         }
         &__container {
             display: flex;
+            flex: 1;
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
-            flex: 1;
             justify-content: space-between;
+            padding: 15px;
         }
         &__content {
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
-            padding: 15px;
+
+            h3 {
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
+            }
+            p {
+                white-space: nowrap;
+                text-overflow: ellipsis;
+                overflow: hidden;
+                margin-top: 7px;
+            }
         }
         .price {
             font-weight: bold;
             display: flex;
             justify-content: flex-end;
             align-items: flex-end;
-            padding: 15px;
+            padding-left: 5px;
         }
         .check {
             background-color: $color-tertiary;
@@ -127,14 +142,13 @@
     }
 }
 
-// [class*="delay-"] {
-//     opacity: 0;
-//     animation: none ;
-//     transition: 0s ;
-// }
-
-@for $i from 1 to 10 {
+@media (prefers-reduced-motion: reduce) {
+    .box {
+        animation: none !important;
+    }
+}
+@for $i from 1 to 11 {
     .box.delay-#{$i} {
-        animation-delay: #{$i/10}s;
+        animation-delay: #{$i * 0.1}s;
     }
 }
