--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -13,8 +13,10 @@
         }
     }
     &__title {
+        font-weight: 400;
         font-size: 20px;
-        margin-bottom: 10px;
+        margin-bottom: 20px;
+        font-family: "Shrikhand", cursive;
     }
     &__nav {
         @media screen and (min-width: 768px) {
@@ -23,7 +25,7 @@
     }
 
     li {
-        margin-bottom: 5px;
+        margin-bottom: 10px;
         @media screen and (min-width: 768px) {
             margin-right: 25px;
         }
