--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,15 +1,20 @@
 header {
     position: relative;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.25);
     padding: 10px;
-    z-index: 1000;
+    z-index: 1;
+    background-color: #fff;
     .logo {
         font-size: 4rem;
         width: 50%;
         margin: auto;
+        cursor: pointer;
         @media screen and (min-width: 768px) {
             width: 25%;
             padding: 10px;
+        }
+        @media screen and (min-width: 1024px) {
+            padding: 0;
         }
         img {
             width: 100%;
