--- a/scss/layout/_menu.scss
+++ b/scss/layout/_menu.scss
@@ -1,19 +1,23 @@
 .menu--img {
     width: 100%;
-    height: 270px;
+    height: 50vh;
     img {
+        margin-top: -80px;
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 }
-
 .menu {
     padding: 20px;
-    background-color: #eeeded;
+    background-color: #f4f4f4;
     position: relative;
     border-radius: 32px 32px 0 0;
-    margin-top: -64px;
+    margin-top: -200px;
+    @media screen and (min-width: 1025px) {
+        width: 90%;
+        margin: -164px auto 0;
+    }
     section {
         margin-bottom: 45px;
     }
@@ -22,7 +26,7 @@
         justify-content: space-between;
         margin: 17px 0;
 
-        i {
+        &__heart {
             position: absolute;
             right: 35px;
             font-size: 25px;
@@ -35,14 +39,11 @@
         &::before {
             content: "";
             position: absolute;
-            width: 10%;
+            width: 50px;
             height: 3px;
             background: $color-tertiary;
             left: 10px;
             bottom: -7px;
-            @media screen and (min-width: 768px) {
-                width: 4%;
-            }
         }
     }
     .box-list {
@@ -66,10 +67,10 @@
         overflow: hidden;
         opacity: 0;
         @media screen and (min-width: 768px) {
-            width: 49%;
+            width: 48%;
         }
         @media screen and (min-width: 1025px) {
-            width: calc(97% / 3);
+            width: calc(96% / 3);
         }
         &__container {
             display: flex;
@@ -122,11 +123,14 @@
                 }
             }
         }
-
-        // animation
+        // animation check
         &:hover {
+            transition-duration: 0.5s;
             .check {
                 margin-right: 0;
+                display: block;
+                transition-duration: 0.5s;
+                @include center_element;
                 i {
                     transform: rotate(360deg);
                 }
