--- a/scss/main.css
+++ b/scss/main.css
@@ -20,10 +20,6 @@ body {
   scroll-behavior: smooth;
 }
 
-h1 {
-  font-size: 5rem;
-}
-
 h3 {
   font-size: 16px;
 }
@@ -232,7 +228,7 @@ ol {
 }
 
 .btn {
-  padding: 12px;
+  padding: 20px;
   border: none;
   border-radius: 30px;
   background: linear-gradient(175deg, #FF79DA 0%, #9356DC 100%);
@@ -242,6 +238,24 @@ ol {
 
 .btn a {
   color: #fff;
+}
+
+.btn.order {
+  padding: 20px 35px;
+}
+
+.heart-unfill {
+  cursor: pointer;
+}
+
+.heart-unfill:hover:before {
+  -webkit-transition: all 0.8s ease-out;
+  transition: all 0.8s ease-out;
+  background-clip: text;
+  -webkit-background-clip: text;
+  font-weight: 900;
+  background-image: linear-gradient(193deg, #9356DC 0%, #FF79DA 100%);
+  -webkit-text-fill-color: transparent;
 }
 
 .footer {
@@ -279,8 +293,10 @@ ol {
 }
 
 .footer__title {
+  font-weight: 400;
   font-size: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  font-family: "Shrikhand", cursive;
 }
 
 @media screen and (min-width: 768px) {
@@ -292,7 +308,7 @@ ol {
 }
 
 .footer li {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 @media screen and (min-width: 768px) {
@@ -315,22 +331,30 @@ ol {
 
 header {
   position: relative;
-  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
-          box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0 0 14px rgba(0, 0, 0, 0.25);
+          box-shadow: 0 0 14px rgba(0, 0, 0, 0.25);
   padding: 10px;
-  z-index: 1000;
+  z-index: 1;
+  background-color: #fff;
 }
 
 header .logo {
   font-size: 4rem;
   width: 50%;
   margin: auto;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
   header .logo {
     width: 25%;
     padding: 10px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  header .logo {
+    padding: 0;
   }
 }
 
@@ -349,10 +373,11 @@ header .arrow {
 
 .menu--img {
   width: 100%;
-  height: 270px;
+  height: 50vh;
 }
 
 .menu--img img {
+  margin-top: -80px;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
@@ -361,10 +386,17 @@ header .arrow {
 
 .menu {
   padding: 20px;
-  background-color: #eeeded;
+  background-color: #f4f4f4;
   position: relative;
   border-radius: 32px 32px 0 0;
-  margin-top: -64px;
+  margin-top: -200px;
+}
+
+@media screen and (min-width: 1025px) {
+  .menu {
+    width: 90%;
+    margin: -164px auto 0;
+  }
 }
 
 .menu section {
@@ -381,7 +413,7 @@ header .arrow {
   margin: 17px 0;
 }
 
-.menu__header i {
+.menu__header__heart {
   position: absolute;
   right: 35px;
   font-size: 25px;
@@ -396,17 +428,11 @@ header .arrow {
 .menu__title--categorie::before {
   content: "";
   position: absolute;
-  width: 10%;
+  width: 50px;
   height: 3px;
   background: #99E2D0;
   left: 10px;
   bottom: -7px;
-}
-
-@media screen and (min-width: 768px) {
-  .menu__title--categorie::before {
-    width: 4%;
-  }
 }
 
 .menu .box-list {
@@ -452,13 +478,13 @@ header .arrow {
 
 @media screen and (min-width: 768px) {
   .menu .box {
-    width: 49%;
+    width: 48%;
   }
 }
 
 @media screen and (min-width: 1025px) {
   .menu .box {
-    width: calc(97% / 3);
+    width: calc(96% / 3);
   }
 }
 
@@ -542,8 +568,25 @@ header .arrow {
   font-size: 16px;
 }
 
+.menu .box:hover {
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+}
+
 .menu .box:hover .check {
   margin-right: 0;
+  display: block;
+  -webkit-transition-duration: 0.5s;
+          transition-duration: 0.5s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .menu .box:hover .check i {
@@ -635,7 +678,7 @@ header .arrow {
 
 .reservation__example {
   width: 100%;
-  background-color: #d9d9d9;
+  background-color: #e6e4e4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -646,8 +689,6 @@ header .arrow {
       -ms-flex-align: center;
           align-items: center;
   align-items: center;
-  -webkit-box-shadow: inset 0px 1px 8px 0px rgba(0, 0, 0, 0.6);
-          box-shadow: inset 0px 1px 8px 0px rgba(0, 0, 0, 0.6);
 }
 
 .reservation__example i {
@@ -661,7 +702,7 @@ header .arrow {
 
 .reservation__description {
   width: 100%;
-  background-color: #eeeded;
+  background-color: #f4f4f4;
   padding: 20px;
   text-align: center;
 }
@@ -679,7 +720,6 @@ header .arrow {
   width: 100%;
   padding: 30px 20px;
   text-align: center;
-  padding: 20px;
 }
 
 .steps h2 {
@@ -687,11 +727,33 @@ header .arrow {
   text-align: left;
 }
 
+@media screen and (min-width: 768px) {
+  .steps h2 {
+    text-align: center;
+  }
+}
+
 .steps ol {
-  padding: 0 0 20px 20px;
+  padding: 0 0 20px 15px;
   list-style: none;
   *list-style: decimal;
   counter-reset: li;
+}
+
+@media screen and (min-width: 768px) {
+  .steps ol {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
 }
 
 .steps__item {
@@ -699,24 +761,41 @@ header .arrow {
   margin-bottom: 20px;
   border-radius: 20px;
   background-color: #eeeded;
-  padding: 20px;
-  -webkit-box-shadow: 1px 1px 5px 1px rgba(207, 207, 207, 0.46);
-          box-shadow: 1px 1px 5px 1px rgba(207, 207, 207, 0.46);
+  padding: 30px 20px 20px 20px;
+  -webkit-box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
+          box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
   text-align: left;
+  width: 100%;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .steps__item {
+    width: 45%;
+    margin-bottom: 35px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .steps__item {
+    width: calc(95% / 3);
+    margin-bottom: 35px;
+  }
 }
 
 .steps__item:before {
   content: counter(li);
   counter-increment: li;
   position: absolute;
+  height: 32px;
+  width: 32px;
   left: -13px;
-  top: 50%;
+  top: 57%;
   color: #fff;
   margin-top: -15px;
   background: #9356DC;
-  height: 32px;
-  width: 32px;
   border-radius: 50%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -738,12 +817,14 @@ header .arrow {
 }
 
 .steps__item span {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bold;
 }
 
 .steps__item i {
-  margin: 0 25px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  margin: 0 20px;
   color: #8c8b8b;
 }
 
@@ -754,6 +835,12 @@ header .arrow {
 
 .restaurants h2 {
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .restaurants h2 {
+    text-align: center;
+  }
 }
 
 .cards {
@@ -767,12 +854,42 @@ header .arrow {
   row-gap: 20px;
 }
 
+@media screen and (min-width: 768px) {
+  .cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    padding: 20px;
+  }
+}
+
 .card {
   position: relative;
   width: 100%;
   background-color: #fff;
   color: #000;
   border-radius: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .card {
+    width: 49%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .card {
+    width: calc(96% / 4);
+  }
 }
 
 .card__img {
@@ -800,7 +917,11 @@ header .arrow {
 }
 
 .card__container {
-  padding: 20px;
+  padding: 15px;
+}
+
+.card__description p {
+  margin-top: 5px;
 }
 
 .card__favorite {
@@ -810,77 +931,76 @@ header .arrow {
   font-size: 25px;
 }
 
-.card__favorite i.heart-unfill:hover:before {
-  -webkit-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-  background-clip: text;
-  -webkit-background-clip: text;
-  font-weight: 900;
-  background-image: linear-gradient(193deg, #9356DC 0%, #FF79DA 100%);
-  -webkit-text-fill-color: transparent;
+.loader {
+  height: 100%;
+  position: fixed;
+  background: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  -webkit-animation: loading 2s linear;
+          animation: loading 2s linear;
+  z-index: 1000;
+  visibility: hidden;
 }
 
-@media screen and (min-width: 768px) {
-  .steps ol {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  .steps ol li {
-    width: 45%;
-  }
-  .steps ol li:first-child, .steps ol li:nth-of-type(2) {
-    margin-bottom: 35px;
-  }
-  .cards {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-  }
-  .card {
-    width: 45%;
-  }
+.loader__inner {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-@media screen and (min-width: 1024px) {
-  .steps ol {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
-  }
-  .steps ol li {
-    width: 30%;
-    margin-bottom: 35px;
-  }
-  .cards {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    padding: 20px;
-  }
-  .card {
-    width: 23%;
-  }
+.loader__inner span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  -webkit-animation: animate 5s linear infinite;
+          animation: animate 5s linear infinite;
+}
+
+.loader__inner span:nth-child(1) {
+  border-radius: 38% 62% 64% 36% / 43% 35% 65% 57%;
+  border: 2px solid #9356DC;
+}
+
+.loader__inner span:nth-child(2) {
+  animation-direction: reverse;
+  border-radius: 41% 59% 40% 60% / 65% 66% 34% 35%;
+  border: 2px solid #FF79DA;
+}
+
+.loader__inner span:nth-child(3) {
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  border-radius: 73% 27% 56% 44% / 57% 74% 26% 43%;
+  border: 2px solid #99E2D0;
+}
+
+.loader__inner h2 {
+  color: #000;
+  font-weight: 500;
 }
 
 @-webkit-keyframes revealAnimation {
@@ -906,6 +1026,54 @@ header .arrow {
     -webkit-transform: translateY(0px);
             transform: translateY(0px);
     opacity: 1;
+  }
+}
+
+@-webkit-keyframes animate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes animate {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes loading {
+  0% {
+    visibility: visible;
+    opacity: 0.9;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+
+@keyframes loading {
+  0% {
+    visibility: visible;
+    opacity: 0.9;
+  }
+  50% {
+    opacity: 0.9;
+  }
+  100% {
+    visibility: hidden;
   }
 }
 /*# sourceMappingURL=main.css.map */
