--- a/scss/pages/_animation.scss
+++ b/scss/pages/_animation.scss
@@ -1,10 +1,33 @@
+// card
 @keyframes revealAnimation {
-    0% {
-      transform: translateY(30px);
-      opacity: 0;
-    }
-    100% {
-      transform: translateY(0px);
-      opacity: 1;
-    }
+  0% {
+    transform: translateY(30px);
+    opacity: 0;
   }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes loading {
+  0% {
+    visibility: visible;
+    opacity: 0.9;
+  }
+  50%{
+    opacity: 0.9;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
