--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -3,11 +3,11 @@
     flex-wrap: wrap;
     &__example {
         width: 100%;
-        background-color: #d9d9d9;
+        background-color: #e6e4e4;
         // box-shadow: inset 0em 1em gold;
         @include center_element;
         align-items: center;
-        box-shadow: inset 0px 1px 8px 0px rgba(0, 0, 0, 0.6);
+        // box-shadow: inset 0px 1px 8px 0px rgba(0, 0, 0, 0.6);
 
         i {
             font-size: 22px;
@@ -19,7 +19,7 @@
     }
     &__description {
         width: 100%;
-        background-color: #eeeded;
+        background-color: #f4f4f4;
         padding: 20px;
         text-align: center;
         h2 {
@@ -35,37 +35,55 @@
     width: 100%;
     padding: 30px 20px;
     text-align: center;
-    padding: 20px;
     h2 {
         margin-bottom: 20px;
         text-align: left;
+        @media screen and (min-width: 768px) {
+            text-align: center;
+        }
     }
     ol {
-        padding: 0 0 20px 20px;
+        padding: 0 0 20px 15px;
         list-style: none;
         *list-style: decimal;
         counter-reset: li;
+        @media screen and (min-width: 768px) {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
     }
     &__item {
         position: relative;
         margin-bottom: 20px;
         border-radius: 20px;
         background-color: #eeeded;
-        padding: 20px;
-        box-shadow: 1px 1px 5px 1px rgba(207, 207, 207, 0.46);
+        padding: 30px 20px 20px 20px;
+        box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
         text-align: left;
+        width: 100%;
+        transition: all 0.3s ease;
+        @media screen and (min-width: 768px) {
+            width: 45%;
+            margin-bottom: 35px;
+        }
+        @media screen and (min-width: 1024px) {
+            width: calc(95% / 3);
+            margin-bottom: 35px;
+        }
         cursor: pointer;
         &:before {
             content: counter(li);
             counter-increment: li;
             position: absolute;
+            height: 32px;
+            width: 32px;
             left: -13px;
-            top: 50%;
+            top: 57%;
             color: #fff;
             margin-top: -15px;
             background: $color-primary;
-            height: 32px;
-            width: 32px;
             border-radius: 50%;
             @include center_element;
         }
@@ -76,11 +94,12 @@
             color: $color-primary;
         }
         span {
-            font-size: 18px;
+            font-size: 16px;
             font-weight: bold;
         }
         i {
-            margin: 0 25px;
+            transition: all 0.3s ease;
+            margin: 0 20px;
             color: #8c8b8b;
         }
     }
@@ -91,6 +110,9 @@
     background-color: #eeeded;
     h2 {
         margin-bottom: 20px;
+        @media screen and (min-width: 768px) {
+            text-align: center;
+        }
     }
 }
 
@@ -98,6 +120,13 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        padding: 20px;
+    }
 }
 
 .card {
@@ -106,6 +135,12 @@
     background-color: #fff;
     color: #000;
     @include border-raduis-card;
+    @media screen and (min-width: 768px) {
+        width: 49%;
+    }
+    @media screen and (min-width: 1024px) {
+        width: calc(96% / 4);
+    }
     &__img {
         border-top-left-radius: 15px;
         border-top-right-radius: 15px;
@@ -127,73 +162,65 @@
         border-radius: 5px;
     }
     &__container {
-        padding: 20px;
+        padding: 15px;
     }
-
+    &__description {
+        p {
+            margin-top: 5px;
+        }
+    }
     &__favorite {
         position: absolute;
         bottom: 10%;
         right: 11%;
         font-size: 25px;
-        i.heart-unfill {
-            &:hover {
-                &:before {
-                    transition: all 0.3s ease;
-                    background-clip: text;
-                    -webkit-background-clip: text;
-                    font-weight: 900;
-                    background-image: linear-gradient(193deg, $color-primary 0%, $color-secondary 100%);
-                    -webkit-text-fill-color: transparent;
-                }
-            }
-        }
     }
 }
-
-@media screen and (min-width: 768px) {
-    .steps {
-        ol {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            li {
-                width: 45%;
-                &:first-child,
-                &:nth-of-type(2) {
-                    margin-bottom: 35px;
-                }
+.loader {
+    height: 100%;
+    position: fixed;
+    background: white;
+    @include center_element;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    animation: loading 2s linear;
+    z-index: 1000;
+    visibility: hidden;
+    &__inner {
+        position: relative;
+        width: 300px;
+        height: 300px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        span {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            animation: animate 5s linear infinite;
+            &:nth-child(1) {
+                border-radius: 38% 62% 64% 36% / 43% 35% 65% 57%;
+                border: 2px solid $color-primary;
+            }
+            &:nth-child(2) {
+                animation-direction: reverse;
+                border-radius: 41% 59% 40% 60% / 65% 66% 34% 35%;
+                border: 2px solid $color-secondary;
+            }
+            &:nth-child(3) {
+                animation-duration: 3s;
+                border-radius: 73% 27% 56% 44% / 57% 74% 26% 43%;
+                border: 2px solid $color-tertiary;
             }
         }
-    }
-    .cards {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-evenly;
-    }
-    .card {
-        width: 45%;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .steps {
-        ol {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            li {
-                width: 30%;
-                margin-bottom: 35px;
-            }
+        h2 {
+            color: #000;
+            font-weight: 500;
         }
-    }
-    .cards {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-        padding: 20px;
-    }
-    .card {
-        width: 23%;
     }
 }
