--- a/scss/main.css
+++ b/scss/main.css
@@ -21,7 +21,7 @@ body {
 }
 
 h3 {
-  font-size: 16px;
+  font-size: 17px;
 }
 
 p {
@@ -232,8 +232,17 @@ ol {
   border: none;
   border-radius: 30px;
   background: linear-gradient(175deg, #FF79DA 0%, #9356DC 100%);
-  -webkit-box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
-          box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0 0 11px rgba(0, 0, 0, 0.3);
+          box-shadow: 0 0 11px rgba(0, 0, 0, 0.3);
+  -webkit-transition: 0.2s ease-in-out;
+  transition: 0.2s ease-in-out;
+  cursor: pointer;
+}
+
+.btn:hover {
+  opacity: 0.8;
+  -webkit-box-shadow: 0 0 11px rgba(0, 0, 0, 0.9);
+          box-shadow: 0 0 11px rgba(0, 0, 0, 0.9);
 }
 
 .btn a {
@@ -293,7 +302,7 @@ ol {
 }
 
 .footer__title {
-  font-weight: 800;
+  font-weight: 400;
   font-size: 20px;
   margin-bottom: 20px;
   font-family: "Shrikhand";
@@ -315,6 +324,10 @@ ol {
   margin-bottom: 10px;
 }
 
+.footer li:hover a {
+  color: #9356DC;
+}
+
 @media screen and (min-width: 768px) {
   .footer li {
     margin-right: 25px;
@@ -325,6 +338,8 @@ ol {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
   color: #fff;
 }
 
@@ -389,7 +404,7 @@ header .arrow {
 }
 
 .menu {
-  padding: 20px;
+  padding: 20px 20px 70px 20px;
   background-color: #f4f4f4;
   position: relative;
   border-radius: 32px 32px 0 0;
@@ -398,7 +413,7 @@ header .arrow {
 
 @media screen and (min-width: 1025px) {
   .menu {
-    width: 90%;
+    width: 70%;
     margin: -164px auto 0;
   }
 }
@@ -425,8 +440,10 @@ header .arrow {
 
 .menu__title--categorie {
   position: relative;
+  font-size: 16px;
   margin-bottom: 20px;
-  padding-left: 10px;
+  padding-left: 7px;
+  font-weight: 400;
 }
 
 .menu__title--categorie::before {
@@ -435,7 +452,7 @@ header .arrow {
   width: 50px;
   height: 3px;
   background: #99E2D0;
-  left: 10px;
+  left: 7px;
   bottom: -7px;
 }
 
@@ -499,8 +516,6 @@ header .arrow {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
@@ -509,14 +524,10 @@ header .arrow {
 }
 
 .menu .box__content {
-  white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
 }
 
 .menu .box__content h3 {
-  white-space: nowrap;
-  text-overflow: ellipsis;
   overflow: hidden;
 }
 
@@ -608,7 +619,6 @@ header .arrow {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 15px;
 }
 
 .menu__btn a {
@@ -672,15 +682,7 @@ header .arrow {
           animation-delay: 1s;
 }
 
-.reservation {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.reservation__example {
+.location {
   width: 100%;
   background-color: #e6e4e4;
   display: -webkit-box;
@@ -693,29 +695,43 @@ header .arrow {
       -ms-flex-align: center;
           align-items: center;
   align-items: center;
+  color: #5f5f5f;
 }
 
-.reservation__example i {
-  font-size: 22px;
+.location i {
+  font-size: 17px;
 }
 
-.reservation__example p {
-  font-size: 22px;
+.location p {
+  font-size: 17px;
   padding: 20px;
 }
 
-.reservation__description {
-  width: 100%;
+.reservation {
   background-color: #f4f4f4;
   padding: 20px;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-.reservation__description h2 {
+.reservation h2 {
   margin-bottom: 18px;
+  padding: 0 20px;
 }
 
-.reservation__description p {
+.reservation p {
   font-size: 17px;
   margin-bottom: 30px;
 }
@@ -830,6 +846,7 @@ header .arrow {
   transition: all 0.3s ease;
   margin: 0 20px;
   color: #8c8b8b;
+  width: 15px;
 }
 
 .restaurants {
@@ -856,6 +873,7 @@ header .arrow {
       -ms-flex-direction: column;
           flex-direction: column;
   row-gap: 20px;
+  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 768px) {
@@ -865,14 +883,32 @@ header .arrow {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
     -webkit-box-pack: space-evenly;
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
     padding: 20px;
+    -webkit-column-gap: 20px;
+            column-gap: 20px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cards {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    padding: 20px 250px;
+    -webkit-column-gap: 10px;
+            column-gap: 10px;
   }
 }
 
@@ -881,19 +917,28 @@ header .arrow {
   width: 100%;
   background-color: #fff;
   color: #000;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
   border-radius: 15px;
 }
 
 @media screen and (min-width: 768px) {
   .card {
-    width: 49%;
+    width: 48%;
   }
 }
 
 @media screen and (min-width: 1024px) {
   .card {
-    width: calc(96% / 4);
+    min-width: 47%;
   }
+}
+
+.card:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 }
 
 .card__img {
