--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,31 +1,30 @@
-.reservation {
-    display: flex;
-    flex-wrap: wrap;
-    &__example {
-        width: 100%;
-        background-color: #e6e4e4;
-        @include center_element;
-        align-items: center;
-        i {
-            font-size: 22px;
-        }
-        p {
-            font-size: 22px;
-            padding: 20px;
-        }
+.location {
+    width: 100%;
+    background-color: #e6e4e4;
+    @include center_element;
+    align-items: center;
+    color: #5f5f5f;
+    i {
+        font-size: 17px;
     }
-    &__description {
-        width: 100%;
-        background-color: #f4f4f4;
+    p {
+        font-size: 17px;
         padding: 20px;
-        text-align: center;
-        h2 {
-            margin-bottom: 18px;
-        }
-        p {
-            font-size: 17px;
-            margin-bottom: 30px;
-        }
+    }
+}
+.reservation {
+    background-color: #f4f4f4;
+    padding: 20px;
+    text-align: center;
+    @include center_element;
+    flex-direction: column;
+    h2 {
+        margin-bottom: 18px;
+        padding: 0 20px;
+    }
+    p {
+        font-size: 17px;
+        margin-bottom: 30px;
     }
 }
 .steps {
@@ -98,10 +97,10 @@
             transition: all 0.3s ease;
             margin: 0 20px;
             color: #8c8b8b;
+            width: 15px;
         }
     }
 }
-
 .restaurants {
     padding: 20px;
     background-color: #eeeded;
@@ -117,12 +116,20 @@
     display: flex;
     flex-direction: column;
     row-gap: 20px;
+    margin-bottom: 40px;
     @media screen and (min-width: 768px) {
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-flow: row wrap;
         justify-content: space-evenly;
         padding: 20px;
+        column-gap: 20px;
+    }
+    @media screen and (min-width: 1024px) {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-evenly;
+        padding: 20px 250px;
+        column-gap: 10px;
     }
 }
 
@@ -131,12 +138,17 @@
     width: 100%;
     background-color: #fff;
     color: #000;
+    transition: 0.5s ease-in-out;
     @include border-raduis-card;
     @media screen and (min-width: 768px) {
-        width: 49%;
+        width: 48%;
     }
     @media screen and (min-width: 1024px) {
-        width: calc(96% / 4);
+        min-width: 47%;
+    }
+    &:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
     }
     &__img {
         border-top-left-radius: 15px;
