--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -12,12 +12,41 @@
         padding: 20px;
     }
 }
+.row {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    @media screen and (min-width: 1024px) {
+        display: flex;
+        flex-direction: row;
+    }
+    section {
+        width: 100%;
+        @media screen and (min-width: 1024px) {
+            width: 50%;
+        }
+    }
+}
 .reservation {
+    // background-color: #f4f4f4;
+    // padding: 20px;
+    // text-align: center;
+    // @include center_element;
+    // flex-direction: column;
+    // h2 {
+    //     margin-bottom: 18px;
+    //     padding: 0 20px;
+    // }
+    // p {
+    //     font-size: 17px;
+    //     margin-bottom: 30px;
+    // }
     background-color: #f4f4f4;
     padding: 20px;
     text-align: center;
     @include center_element;
     flex-direction: column;
+    height: 100%;
     h2 {
         margin-bottom: 18px;
         padding: 0 20px;
@@ -27,6 +56,7 @@
         margin-bottom: 30px;
     }
 }
+
 .steps {
     width: 100%;
     padding: 30px 20px;
@@ -39,14 +69,24 @@
         }
     }
     ol {
+        // padding: 0 0 20px 15px;
+        // list-style: none;
+        // *list-style: decimal;
+        // counter-reset: li;
+        // @media screen and (min-width: 768px) {
+        //     display: flex;
+        //     flex-direction: row;
+        //     flex-wrap: wrap;
+        //     justify-content: space-around;
+        // }
         padding: 0 0 20px 15px;
         list-style: none;
         *list-style: decimal;
         counter-reset: li;
         @media screen and (min-width: 768px) {
             display: flex;
-            flex-direction: row;
             flex-wrap: wrap;
+            flex-direction: row;
             justify-content: space-around;
         }
     }
@@ -54,7 +94,7 @@
         position: relative;
         margin-bottom: 20px;
         border-radius: 20px;
-        background-color: #eeeded;
+        background-color: #f4f4f4;
         padding: 30px 20px 20px 20px;
         box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.125);
         text-align: left;
@@ -65,8 +105,11 @@
             margin-bottom: 35px;
         }
         @media screen and (min-width: 1024px) {
-            width: calc(95% / 3);
-            margin-bottom: 35px;
+            // width: calc(95% / 3);
+            // margin-bottom: 35px;
+            width: 75%;
+            margin: 0 auto 35px auto;
+            // margin-bottom: 35px;
         }
         cursor: pointer;
         &:before {
@@ -103,7 +146,7 @@
 }
 .restaurants {
     padding: 20px;
-    background-color: #eeeded;
+    background-color: #f4f4f4;
     h2 {
         margin-bottom: 20px;
         @media screen and (min-width: 768px) {
