--- a/scss/pages/_animation.scss
+++ b/scss/pages/_animation.scss
@@ -11,11 +11,18 @@
 }
 
 @keyframes animate {
+  // 0% {
+  //   transform: rotate(0deg);
+  // }
+  // 100% {
+  //   transform: rotate(360deg);
+  // }
   0% {
-    transform: rotate(0deg);
+    transform: rotate(-270deg);
   }
+
   100% {
-    transform: rotate(360deg);
+    transform: rotate(0);
   }
 }
 
@@ -24,7 +31,7 @@
     visibility: visible;
     opacity: 0.9;
   }
-  50%{
+  50% {
     opacity: 0.9;
   }
   100% {
