--- a/scss/components/_heart.scss
+++ b/scss/components/_heart.scss
@@ -1,22 +1,31 @@
-.heart-unfill {
+.heart {
+    position: relative;
+    right: 30px;
+    @include center_element;
+    font-size: 25px;
+    i {
+        position: absolute;
+        left: 10%;
+    }
+    .fas {
+        opacity: 0;
+        transition: all 500ms ease-in-out;
+    }
+    &:hover .fas {
+        opacity: 1;
+    }
+    .far {
+        opacity: 1;
+        transition: all 500ms ease-in-out;
+    }
+    &:hover .far {
+        opacity: 0;
+    }
+}
+.heart-fill {
     cursor: pointer;
-    transition: 0.5s ease-in-out;
-
-    &::before {
-        transition: 0.5s ease-in-out;
-        background-color: #fff;
-    }
-    &:hover {
-        transition: 0.5s ease-in-out;
-
-        &:before {
-            transition: 0.5s ease-in-out;
-
-            background-clip: text;
-            -webkit-background-clip: text;
-            font-weight: 900;
-            background-image: linear-gradient(193deg, $color-primary 0%, $color-secondary 100%);
-            -webkit-text-fill-color: transparent;
-        }
-    }
+    background: linear-gradient(193deg, $color-primary 0%, $color-secondary 100%);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
