--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -42,6 +42,9 @@
         i {
             width: 20px;
             margin-right: 10px;
+            &::before{
+                width: 10px;
+            }
         }
     }
 }
