--- a/scss/main.css
+++ b/scss/main.css
@@ -255,17 +255,8 @@ ol {
 
 .heart {
   position: relative;
-  right: 30px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 25px;
+  height: 50px;
+  width: 80px;
 }
 
 .heart i {
@@ -273,32 +264,35 @@ ol {
   left: 10%;
 }
 
-.heart .fas {
-  opacity: 0;
-  -webkit-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-}
-
-.heart:hover .fas {
-  opacity: 1;
-}
-
-.heart .far {
-  opacity: 1;
-  -webkit-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-}
-
-.heart:hover .far {
-  opacity: 0;
-}
-
-.heart-fill {
+.heart .heart-fill {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 0px;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
+  -webkit-transition: all 1s;
+  transition: all 1s;
   cursor: pointer;
   background: linear-gradient(193deg, #9356DC 0%, #FF79DA 100%);
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+
+.heart:hover .heart-fill {
+  font-size: 26px;
+}
+
+.heart .heart-unfill {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate3d(-50%, -50%, 0);
+          transform: translate3d(-50%, -50%, 0);
+  font-size: 25px;
+  -webkit-transition: all 1s;
+  transition: all 1s;
 }
 
 .footer {
@@ -451,7 +445,7 @@ header .arrow {
 
 @media screen and (min-width: 1025px) {
   .menu {
-    width: 70%;
+    width: 80%;
     margin: -164px auto 0;
   }
 }
@@ -905,6 +899,8 @@ header .arrow {
 
 .steps__item:hover {
   background-color: #fcf0ff;
+  -webkit-box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.125);
+          box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.125);
 }
 
 .steps__item:hover i {
@@ -1177,28 +1173,48 @@ header .arrow {
 @-webkit-keyframes loading {
   0% {
     visibility: visible;
-    opacity: 0.9;
+    opacity: 1;
   }
   50% {
-    opacity: 0.9;
+    opacity: 1;
   }
   100% {
     visibility: hidden;
-    opacity: 0.9;
   }
 }
 
 @keyframes loading {
   0% {
     visibility: visible;
-    opacity: 0.9;
+    opacity: 1;
   }
   50% {
-    opacity: 0.9;
+    opacity: 1;
   }
   100% {
     visibility: hidden;
-    opacity: 0.9;
+  }
+}
+
+@-webkit-keyframes heart {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes heart {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 /*# sourceMappingURL=main.css.map */
