--- a/scss/pages/_animation.scss
+++ b/scss/pages/_animation.scss
@@ -1,4 +1,4 @@
-// card
+// menu card
 @keyframes revealAnimation {
   0% {
     transform: translateY(30px);
@@ -10,13 +10,8 @@
   }
 }
 
+// rotate check
 @keyframes animate {
-  // 0% {
-  //   transform: rotate(0deg);
-  // }
-  // 100% {
-  //   transform: rotate(360deg);
-  // }
   0% {
     transform: rotate(-270deg);
   }
@@ -25,17 +20,26 @@
     transform: rotate(0);
   }
 }
-
+// loading
 @keyframes loading {
   0% {
     visibility: visible;
-    opacity: 0.9;
+    opacity: 1;
   }
   50% {
-    opacity: 0.9;
+    opacity: 1;
   }
   100% {
     visibility: hidden;
-    opacity: 0.9;
+  }
+}
+
+// animation heart fill
+@keyframes heart {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
   }
 }
