--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -128,6 +128,7 @@
         }
         &:hover {
             background-color: #fcf0ff;
+            box-shadow: 7px 7px 15px rgba(0, 0, 0, 0.125);
         }
         &:hover i {
             color: $color-primary;
@@ -223,8 +224,8 @@
             margin-top: 5px;
         }
     }
-
 }
+// loading
 .loader {
     height: 100%;
     position: fixed;
